# matplotlib-aximgcache

./: .gitignore  README.md  example.ipynb  setup.cfg
.github/workflows/: python-package-pip.yml
matplotlib_aximgcache/: __init__.py  imgcache.py
tests/: test_all.py
