[metadata]
name = matplotlib-aximgcache
version = attr: matplotlib_aximgcache.__version__
author = Leif Denby
author_email = leif@denby.eu
description = Easily store and re-replot matplotlib Axes content
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/matplotlib-aximgcache

[options]
packages=find:
install_requires =
  matplotlib
  Pillow

setup_requires = setuptools_scm

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  nbval
  nb-black
dev =
  %(test)s
  pre-commit
  ipython

[isort]
profile=black

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
